fix: fix layout shift on reload

--- a/public/style.css
+++ b/public/style.css
@@ -144,6 +144,8 @@ td {
   padding: 1px 12px;
   color: white;
   display: inline-block;
+  min-width: 12rem;
+  text-align: center;
 }
 
 .ok {
